[package]
name = "feedthemonkey"
version = "3.0.0"
authors = ["Jeena <hello@jeena.net>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jeena/feedthemonkey"
descrition = "Desktop client for the TinyTinyRSS feed reader"
licese = "GPL-3.0-or-later"
license-file = "COPYING"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
