[package]
name = "feedthemonkey"
version = "3.0.0"
authors = ["Jeena <hello@jeena.net>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jeena/feedthemonkey"
description = "Desktop client for the TinyTinyRSS feed reader"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { version = "2.1.1", features = ["serde"] }
url_serde = "0.2.0"
confy = "0.3.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
